--- a/index.html
+++ b/index.html
@@ -125,6 +125,14 @@
                 <i class="uil uil-arrow-right"></i>
               </a>
             </div>
+            <div class="services">
+              <img src="./images/presentation.png" alt="" />
+              <h4>IT Training</h4>
+              <a class="see-more" data-name="p-6">
+                Show me more
+                <i class="uil uil-arrow-right"></i>
+              </a>
+            </div>
           </div>
         </div>
       </section>
@@ -179,6 +187,14 @@
             Transform your ideas into a solid business product with our
             customized web solution and expertise in Fintech, Construction,
             Healthcare, Education, Hospitality and other industries
+          </span>
+        </div>
+        <div class="service" data-target="p-6">
+          <i class="uil uil-times"></i>
+          <h3 class="service-head">IT Training</h3>
+          <span class="des-1"
+            ><i class="uil uil-check-circle"></i>
+            Keep your self updated and learn the current IT Technologies
           </span>
         </div>
       </div>
